// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelContainer content state 1`] = `[Function]`;

exports[`PanelContainer empty state 1`] = `[Function]`;

exports[`PanelContainer loading state 1`] = `
<DocumentFragment>
  <div
    class="panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Test Panel
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <div>
        Loading
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PanelContainer with action buttons 1`] = `
<DocumentFragment>
  <div
    class="panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Test Panel
      </h2>
      <button
        type="button"
      >
        Button
      </button>
    </div>
    <div
      class="h-100 content"
    >
      <div>
        Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
